# rusty-sonos

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: discovery.rs  errors.rs  lib.rs  parsing.rs  responses.rs  services.rs  speaker.rs  utils.rs  xml.rs
