[package]
name = "rusty-sonos"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A library for communicating with and discovering Sonos speakers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
roxmltree = "0.19.0"
xml-builder = "0.5.2"
