[package]
name = "rusty-sonos"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "A library for communicating with and discovering Sonos speakers"
readme = "README.md"
repository = "https://github.com/Brendon-Hablutzel/rusty-sonos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
roxmltree = "0.19.0"
xml-builder = "0.5.2"
